--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>React Admin App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="index.jsx" type="module"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -41,3 +41,7 @@
     -->
   </body>
 </html>
+:
+
+
+
